Sumo soporte mongoose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,17 @@ services:
     restart: 'unless-stopped'
     networks:
       - backend
+    links:
+      - mongo
+    depends_on:
+      - mongo
+  mongo:
+    image: mvertes/alpine-mongo
+    container_name: mongo
+    ports:
+      - '27017:27017'
+    networks:
+      - backend
 
 networks:
   backend:
