--- a/.swcrc
+++ b/.swcrc
@@ -23,6 +23,7 @@
       "@/*": ["*"],
       "@config": ["config"],
       "@controllers/*": ["controllers/*"],
+      "@databases": ["databases"],
       "@dtos/*": ["dtos/*"],
       "@exceptions/*": ["exceptions/*"],
       "@interfaces/*": ["interfaces/*"],
@@ -37,6 +38,3 @@
     "type": "commonjs"
   }
 }
-
-
-
