--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "helmet": "^5.1.1",
     "hpp": "^0.2.3",
     "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.5.0",
     "morgan": "^1.10.0",
     "swagger-jsdoc": "^6.2.1",
     "swagger-ui-express": "^4.5.0",
@@ -45,6 +46,7 @@
     "@types/hpp": "^0.2.2",
     "@types/jest": "^28.1.6",
     "@types/jsonwebtoken": "^8.5.8",
+    "@types/mongoose": "^5.11.97",
     "@types/morgan": "^1.9.3",
     "@types/node": "^17.0.45",
     "@types/supertest": "^2.0.12",
