--- a/.env.example
+++ b/.env.example
@@ -2,9 +2,7 @@
 PORT = 3000
 
 # DATABASE
-DB_HOST = localhost
-DB_PORT = 27017
-DB_DATABASE = dev
+DATABASE_URL= mysql://root:password@mysql:3306/dev
 
 # TOKEN
 SECRET_KEY = secretKey
