--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,8 @@ services:
     restart: 'unless-stopped'
     networks:
       - backend
+    depends_on:
+      - server
   server:
     build:
       context: ./
@@ -26,16 +28,25 @@ services:
     networks:
       - backend
     links:
-      - mongo
+      - mysql
     depends_on:
-      - mongo
-  mongo:
-    image: mvertes/alpine-mongo
-    container_name: mongo
+      mysql:
+        condition: service_healthy
+  mysql:
+    image: mysql:5.7
+    container_name: mysql
+    environment:
+      MYSQL_ROOT_USER: root
+      MYSQL_ROOT_PASSWORD: password
+      MYSQL_DATABASE: dev
     ports:
-      - '27017:27017'
+      - '3306:3306'
     networks:
       - backend
+    healthcheck:
+      test: ["CMD", 'mysqladmin', 'ping', '-h', 'localhost', '-u', 'root', '-p$$MYSQL_ROOT_PASSWORD' ]
+      timeout: 20s
+      retries: 10
 
 networks:
   backend:
