Fix nodemon template

--- a/package.json
+++ b/package.json
@@ -6,9 +6,7 @@
   "license": "ISC",
   "scripts": {
     "start": "npm run build && cross-env NODE_ENV=production node dist/server.js",
-    "start:migrate": "prisma migrate dev --preview-feature && npm run build && cross-env NODE_ENV=production node dist/server.js",
-    "dev": "cross-env NODE_ENV=development nodemon",
-    "dev:migrate": "prisma migrate dev --preview-feature && cross-env NODE_ENV=development nodemon",
+    "dev": "cross-env NODE_ENV=development nodemon --legacy-watch",
     "build": "swc src -d dist --source-maps --copy-files",
     "build:tsc": "tsc && tsc-alias",
     "test": "jest --forceExit --detectOpenHandles",
