Cambios en arquitectura

--- a/.env.example
+++ b/.env.example
@@ -1,16 +1,6 @@
-# PORT
-PORT = 3000
-
 # DATABASE
 DATABASE_URL= mysql://root:password@mysql:3306/dev
 
-# TOKEN
-SECRET_KEY = secretKey
-
 # LOG
 LOG_FORMAT = dev
-LOG_DIR = ../logs
-
-# CORS
-ORIGIN = *
-CREDENTIALS = true
+LOG_DIR = ../../../logs
