--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,38 +1,7 @@
 version: '3.7'
 
 services:
-  proxy:
-    image: nginx:alpine
-    container_name: proxy
-    ports:
-      - '80:80'
-    volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf
-    restart: 'unless-stopped'
-    networks:
-      - backend
-    depends_on:
-      - server
-  server:
-    build:
-      context: ./
-      target: development-build-stage
-      dockerfile: Dockerfile
-    container_name: server
-    ports:
-      - '3000:3000'
-    volumes:
-      - ./:/app
-      - /app/node_modules
-    restart: 'unless-stopped'
-    networks:
-      - backend
-    links:
-      - mysql
-    depends_on:
-      mysql:
-        condition: service_healthy
-  mysql:
+  gitstats_mysql:
     image: mysql:5.7
     container_name: mysql
     environment:
@@ -42,14 +11,14 @@ services:
     ports:
       - '3306:3306'
     networks:
-      - backend
+      - gitstats
     healthcheck:
       test: ["CMD", 'mysqladmin', 'ping', '-h', 'localhost', '-u', 'root', '-p$$MYSQL_ROOT_PASSWORD' ]
       timeout: 20s
       retries: 10
 
 networks:
-  backend:
+  gitstats:
     driver: bridge
 
 volumes:
