feat(gs-6): integrate graphql + repository pattern + POC organization

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,7 @@ DATABASE_URL= mysql://root:password@mysql:3306/dev
 # LOG
 LOG_FORMAT = dev
 LOG_DIR = ../../../logs
+
+ORGANIZATION_ID=upbirk-com
+GRAPHQL_GITHUB=https://api.github.com/graphql
+GRAPHQL_TOKEN=something
