--- a/tsconfig.json
+++ b/tsconfig.json
@@ -43,8 +43,7 @@
   "include": [
     "src/**/*.ts",
     "src/**/*.json",
-    ".env"
-  ],
+    ".env"],
   "exclude": [
     "node_modules",
     "src/logs"
