--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,6 @@
 # DATABASE
 DATABASE_URL= mysql://root:password@mysql:3306/dev
 
-# LOG
-LOG_FORMAT = dev
-LOG_DIR = ../../../logs
-
-ORGANIZATION_ID=upbirk-com
+# GRAPHQL
 GRAPHQL_GITHUB=https://api.github.com/graphql
 GRAPHQL_TOKEN=something
