--- a/package.json
+++ b/package.json
@@ -27,14 +27,10 @@
     "class-validator": "^0.13.2",
     "commander": "^9.4.1",
     "csv-tools": "^1.2.0",
-    "dotenv": "^16.0.1",
-    "envalid": "^7.3.1",
-    "winston": "^3.8.1",
-    "winston-daily-rotate-file": "^4.7.1"
+    "dotenv": "^16.0.1"
   },
   "devDependencies": {
     "@types/jest": "^28.1.6",
-    "@types/morgan": "^1.9.3",
     "@types/node": "^17.0.45",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.29.0",
@@ -47,6 +43,7 @@
     "ts-node": "^10.9.1",
     "tsc-alias": "^1.7.0",
     "tsconfig-paths": "^4.1.1",
+    "tslib": "^2.4.1",
     "typescript": "^4.7.4"
   }
 }
