fix(gs-7): Migrations fix

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # DATABASE
-DATABASE_URL= mysql://root:password@mysql:3306/dev
+DATABASE_URL=file:../../../db.sqlite3
 
 # GRAPHQL
 GRAPHQL_GITHUB=https://api.github.com/graphql
