--- a/package.json
+++ b/package.json
@@ -11,10 +11,8 @@
     "test:unit": "jest  -c jest.config.unit.js --silent --coverage --forceExit --detectOpenHandles",
     "lint": "eslint --ignore-path .gitignore --ext .ts src/",
     "lint:fix": "npm run lint -- --fix",
-    "prisma:init": "prisma init",
-    "prisma:migrate": "dotenv -e .env.${NODE_ENV}.local -- npx prisma migrate dev --preview-feature",
-    "prisma:generate": "prisma generate",
-    "prisma:makemigration": "prisma migrate diff --from-empty --to-schema-datamodel ./src/infrastructure/database/schema.prisma --script",
+    "migration:make": "prisma migrate dev --schema ./src/infrastructure/database/schema.prisma",
+    "migration:run": "prisma migrate deploy --schema ./src/infrastructure/database/schema.prisma",
     "cli": "ts-node -r tsconfig-paths/register ./src/infrastructure/cli/index.ts"
   },
   "prisma": {
