fix(gs-25): README update

--- a/.env.example
+++ b/.env.example
@@ -3,4 +3,4 @@ DATABASE_URL=file:../../../db.sqlite3
 
 # GRAPHQL
 GRAPHQL_GITHUB=https://api.github.com/graphql
-GRAPHQL_TOKEN=something
+GRAPHQL_TOKEN=<ingrese su token aqui>
