--- a/package.json
+++ b/package.json
@@ -31,11 +31,13 @@
   "devDependencies": {
     "@types/jest": "^28.1.6",
     "@types/node": "^17.0.45",
+    "@types/ora": "^3.2.0",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.29.0",
     "@typescript-eslint/parser": "^5.29.0",
     "eslint": "^8.20.0",
     "jest": "^28.1.1",
+    "ora": "^3.4.0",
     "prisma": "^4.1.0",
     "supertest": "^6.2.4",
     "ts-jest": "^28.0.7",
